src/objects/Record_Log__c.object
<CustomObject>
    <description>A log record that is created from the Record Log Platform Event and is associated with another Salesforce object, such as Payment.</description>
    <fields>
        <fullName>Data__c</fullName>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Related_Record_Id__c</fullName>
        <description>The Id of the record that this log entry is related to.</description>
        <inlineHelpText>The Id of the record that this log entry is related to.</inlineHelpText>
        <label>Related Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Record Log</label>
    <nameField>
        <displayFormat>RLOG{0000000000}</displayFormat>
        <label>Record Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Record Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>